--- a/app/templates/components/gem-card.hbs
+++ b/app/templates/components/gem-card.hbs
@@ -1,6 +1,8 @@
-<div class="gem-cards--card-image">
-  <img src={{image}}>
-</div>
+{{#if image}}
+  <div class="gem-cards--card-image">
+    <img src={{image}}>
+  </div>
+{{/if}}
 <div class="gem-cards--card-header">{{title}}</div>
 <div class="gem-cards--card-copy">
   {{yield}}
