--- a/app/styles/components/_box-callout.scss
+++ b/app/styles/components/_box-callout.scss
@@ -1,10 +1,10 @@
 .box-callout {
   @include outer-container(100%);
-  padding: 0 30px;
-
-  grid {
-    max-width: $maxWidth;
-    margin: 0 auto;
+  
+  .box-callout--content {
+   & > h1, & > h2, & > h3, & > h4 {
+      margin-top: 0;
+    }    
   }
   
   &.is-red {
@@ -14,6 +14,7 @@
     h1, h2, h3, h4, h5 {
       color: white;
       margin-bottom: 0;
+      margin-top: 0;
     }
     
     a {
@@ -22,7 +23,7 @@
   }
   
   &.is-sky {
-    background: url(images/blue-background.svg) no-repeat center top $skyBlue;
+    background-color: $skyBlue;
     padding-bottom: 30px;
     
     grid {
@@ -34,20 +35,16 @@
     background-color: $skyBlue;
   }
   
+  .box-callout--content {
+    @include span-columns(10);
+  }
+  
   .box-callout--img-left, .box-callout--img-right {
-    padding: 30px;
-    
+    @include span-columns(2);
+        
     img {
       max-height: 110px;      
     }
   }
   
-}
-
-.box-callout--content {
-  @include span-columns(9);
-}
-
-.box-callout--img-right {
-  @include span-columns(3);
 }
