--- a/app/styles/components/_gem-cards.scss
+++ b/app/styles/components/_gem-cards.scss
@@ -19,22 +19,18 @@
   $card-image-hover-background: lighten($card-image-background, 5%);
   $card-margin: 1em;
 
-  @include flex-basis(15em);
-  @include flex-grow(1);
   @include transition (all 0.2s ease-in-out);
   background-color: $card-background;
   border-radius: $base-border-radius;
   border: $card-border;
   box-shadow: 0 2px 4px darken($base-background-color, 10%);
   cursor: pointer;
-  margin: $base-spacing $card-margin $base-spacing $card-margin;
   position: relative;
-
-  max-width: 300px;
+  
+  margin-bottom: $base-spacing / 2;
 
   .gem-cards--card-image {
     overflow: hidden;
-    max-height: 200px;
 
     img {
       @include transition (all 0.2s ease-in-out);
@@ -59,6 +55,10 @@
     font-size: 0.9em;
     line-height: 1.5em;
     padding: ($base-spacing / 2) ($base-spacing / 2);
+    
+    p {
+      margin-top: 0;
+    }
   }
   
   &:focus,
