--- a/app/templates/components/gem-sponsor-links.hbs
+++ b/app/templates/components/gem-sponsor-links.hbs
@@ -1,3 +1,3 @@
 {{#each sponsors as |sponsor|}}
-  <a class="gem-sponsor-links--link" href={{sponsor.link}}><img src={{sponsor.logo}} alt="{{sponsor.companyName}} Logo" class="gem-sponsor-links--image"></a>
+  <a class="gem-sponsor-links--link" href={{sponsor.link}}><img src={{sponsor.featured.medium.url}} alt="{{sponsor.companyName}} Logo" class="gem-sponsor-links--image"></a>
 {{/each}}
