--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,30 +1,55 @@
 <section class="conference">
-  <aside>
-    {{#box-content image="http://embermeetup.com/wp-content/uploads/2016/04/wifi-image.svg"}}
+  
+  <main>
+    <article>
+        {{#box-content 
+        image="http://embermeetup.com/wp-content/uploads/2016/04/wifi-image.svg"
+      }}
+        <h2>Broadcasting Live from San Francisco</h2>
+        <p>
+          Join us in beautiful San Francisco for a free, 
+          one–day Ember.js conference packed with informative tech talks, 
+          friendly competitions and non-stop fun.
+        </p>
+      {{/box-content}}
 
-    <h2>Broadcasting Live from San Francisco</h2>
-      
-      Join us in beautiful San Francisco for a free, one–day Ember.js conference packed with informative tech talks, friendly competitions and non-stop fun.
+      {{#box-content}}
+        <h2>Err, so... fun, yes. And what am I going to learn?</h2>
+        {{gem-topics topics=model.presentationTopics}}
+      {{/box-content}}
 
-      Global Ember Meetup has become the go-to online meetup for everyone in the Ember.js community. Paired with the Modern Web Variety Show concept, this conference will be full of great content and surprises left and right.
+    </article>
+    <aside>
+      {{#box-content}}
+        <h2>Get your free ticket</h2>
+        {{#gem-cards as |cards|}}
+          {{#cards.card 'Participate in person'}}
+            <p>Participate in games and the contributor workshop.</p>
+            <a class="button red-button" href={{model.eventbrite}}>RSVP on Eventbrite</a>
+          {{/cards.card}}
 
-    {{/box-content}}
+          {{#cards.card 'Participate online'}}
+            <p>Enjoy talks and discussion from the comfort of your home.</p>
+            <a class="button red-button" href={{model.bigmarker}}>RSVP on BigMarker</a>
+          {{/cards.card}}
+        {{/gem-cards}}
+      {{/box-content}}
+    </aside>
+  </main>
 
-    <h2>Err, so... fun, yes. And what am I going to learn?</h2>
-    {{#box-noimage}}
-    {{gem-topics topics=model.presentationTopics}}
-    {{/box-noimage}}
-
-    {{#box-callout image="http://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"}}
+  {{#box-callout 
+    image="http://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
+  }}
     <h2>Lightning talks</h2>
-    If you're attending in person and would like to give a lightning talk. Send us an email <a href="mailto:t@embersherpa.com">t@embersherpa.com</a>
+    <p>
+      If you're attending in person and would like to give a lightning talk.<br>
+      Send us an email <a href="mailto:t@embersherpa.com">t@embersherpa.com</a>
+    </p>
+  {{/box-callout}}
 
-    {{/box-callout}}
-
-    {{#box-content}}
+  {{#box-content}}
     <h2>Schedule</h2>
-    &nbsp;
-
+    
     {{#gem-agenda as |agenda|}}
       {{agenda.item '9:00' 'Gathering'}}
       {{agenda.item '9:30' 'Keynote by Taras and Tracy'}}
@@ -43,38 +68,18 @@
       {{agenda.item '3:15' 'Contributor Workshop'}}
       {{agenda.item '6:30' 'End'}}
     {{/gem-agenda}}
+  {{/box-content}}
 
-    {{/box-content}}
-
-    {{#box-callout backgroundColor="sky"}}
-
+  {{#box-callout backgroundColor="sky"}}  
     <h2>Sponsors</h2>
-    Big 🙇 to our sponsors for helping us bring this event to you.
+    <p>Big 🙇 to our sponsors for helping us bring this event to you.</p>
 
     {{gem-sponsor-links sponsors=model.sponsors}}
 
-    Want your logo to be seen by some ridiculously awesome developers?
-    We would be very grateful for your support.
+    <p>Want your logo to be seen by some ridiculously awesome developers?<br>
+    We would be very grateful for your support.</p>
 
     <a class="button red-button" href="/sponsor">Sponsor Us!</a>
 
-    {{/box-callout}}
-  </aside>
-  <article>
-      {{#gem-cards as |cards|}}
-        {{#cards.card 'In person' image='http://embermeetup.com/wp-content/uploads/2016/04/emberconf_CC-300x200.jpg'}}
-      Participate in games and the contributor workshop.
-
-      <a class="button red-button" href="{{model.eventbrite}}">RSVP on Eventbrite</a>
-        {{/cards.card}}
-
-        {{#cards.card 'Remotely' image='http://embermeetup.com/wp-content/uploads/2016/04/Chilling-on-the-couch-300x200.png'}}
-        
-        Enjoy talks and discussion from the comfort of your home.
-
-      <a class="button red-button" href="{{model.bigmarker}}">RSVP on BigMarker</a>
-
-        {{/cards.card}}
-      {{/gem-cards}}
-  </article>
+  {{/box-callout}}
 </section>
