Added ability to set header

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -17,6 +17,7 @@
     <li><h3>Contribute</h3></li>
     <li>{{link-to 'Give a talk' 'pages' 'speak'}}</li>
     <li>{{link-to 'Become a sponsor' 'pages' 'sponsorship'}}</li>
+    <li><a href="https://github.com/EmberMeetup/website/issues/new">Suggestions</a></li>
   </ul>
   <ul>
     <li><h3>Follow Us</h3></li>
