--- a/app/styles/components/_gem-footer.scss
+++ b/app/styles/components/_gem-footer.scss
@@ -4,6 +4,7 @@
   $base-accent-color: #477DCA !default;
   $medium-screen: em(640) !default;
   $large-screen: em(860) !default;
+  position: relative;
   
   ul {
     padding: 0;
