Turned sponsor link to link-to

--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -79,7 +79,7 @@
     <p>Want your logo to be seen by some ridiculously awesome developers?<br>
     We would be very grateful for your support.</p>
 
-    <a class="button red-button" href="/sponsor">Sponsor Us!</a>
+    {{link-to 'Sponsor Us!' 'pages' 'sponsor' classNames='button red-button'}}
 
   {{/box-callout}}
 </section>
