--- a/app/styles/components/_gem-cards.scss
+++ b/app/styles/components/_gem-cards.scss
@@ -52,7 +52,7 @@
   }
 
   .gem-cards--card-copy {
-    font-size: 0.9em;
+    font-size: 21.7px;
     line-height: 1.5em;
     padding: ($base-spacing / 2) ($base-spacing / 2);
     
