--- a/app/styles/pages/_videos.scss
+++ b/app/styles/pages/_videos.scss
@@ -33,6 +33,7 @@
    margin-bottom: $base-spacing;
    position: relative;
    min-height: 60px;
+   float: none;
    
   .episode-code {
     text-transform: uppercase;
