Iffy implementation of scroll memory

--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,3 +1,5 @@
+{{remember-document-scroll key="gemconf"}}
+
 <section class="conference">
   
   <main>
@@ -14,8 +16,11 @@
       {{/box-content}}
 
       {{#box-content}}
-        <h2>Err, so... fun, yes. And what am I going to learn?</h2>
+
+        <h2 class="give-whitespace">Err, so... fun, yes. And what am I going to learn?</h2>
+
         {{gem-topics topics=model.presentationTopics}}
+        
       {{/box-content}}
 
     </article>
