--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -1,3 +1,14 @@
+{{remember-document-scroll 
+  key=(concat 'videos' 
+        (or 
+          (if episode (concat '/episode-' episode)) 
+          (if tag (concat '/tag-' tag))
+          (if category (concat '/category-' category))
+        ) 
+        (if page (concat '/page/' page))
+      )
+}}
+
 <section class="videos-page">
   
   {{#gem-search-tools
@@ -47,5 +58,5 @@
     {{/if}}
   {{/with}}
   
-  {{outlet}}
+  {{liquid-outlet}}
 </section>
