Created service to update head

--- a/app/styles/components/_nav-header.scss
+++ b/app/styles/components/_nav-header.scss
@@ -21,6 +21,10 @@ header {
     background: none;
     border: none;
   }
+  
+  a.active {
+    font-weight: bold;
+  }
 
   .go-home {
     display: block;
