--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,3 +1,7 @@
+{{head-data
+  title=model.title
+  image=model.featured.url
+}}
 {{remember-document-scroll key="gemconf"}}
 
 <section class="conference">
