--- a/app/templates/head.hbs
+++ b/app/templates/head.hbs
@@ -3,7 +3,7 @@
 <!-- here. The 'model' available in this template can be populated by -->
 <!-- setting values on the 'head-data' service. -->
 {{#if model.title}}
-<title>{{model.title}} | Global Ember Meetup</title>
+<title>{{model.title}} on Global Ember Meetup</title>
 <meta property="og:title" content={{model.title}} />
 {{else}}
 <title>Global Ember Meetup</title>
