--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -1,3 +1,8 @@
+{{head-data
+  title="The Ember Show"
+}}
+{{scroll-to position=0}}
+
 <div class="episodes-page">
   <h1 class="episodes-page--title">Season {{season}}</h1>
   
