--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -1,62 +1,64 @@
-{{remember-document-scroll 
-  key=(concat 'videos' 
-        (or 
-          (if episode (concat '/episode-' episode)) 
-          (if tag (concat '/tag-' tag))
-          (if category (concat '/category-' category))
-        ) 
-        (if page (concat '/page/' page))
-      )
+{{#with 
+  (hash 
+    title=(or
+      (if episode   (i 'Videos from episode "${title}"' title=(get (find-by 'slug' episode model.episodes) 'title')))
+      (if tag       (i 'Videos tagged with "${title}"'  title=(get (find-by 'slug' tag model.tags) 'name')))    
+      (if category  (i 'Videos in category "${title}"' title=(get (find-by 'slug' category model.categories) 'name')))
+    )
+    key=(concat 
+      'videos' 
+      (or 
+        (if episode (concat '/episode-' episode)) 
+        (if tag (concat '/tag-' tag))
+        (if category (concat '/category-' category))
+      ) 
+      (if page (concat '/page/' page))
+    )
+  )
+  as |page|
 }}
-
-<section class="videos-page">
-  
-  {{#gem-search-tools
-    is-expanded=filters
-    as |tools|
-  }}    
-    {{#tools.filter 
-      models=model.episodes
-      label='Episodes'
-      as |episode|
-    }}
-      {{#link-to (query-params episode=episode.slug category=null tag=null filters=false)}}<span class="episode-code">{{episode.slug}}</span> - {{episode.title}}{{/link-to}}
-    {{/tools.filter}}
-    {{#tools.filter 
-      models=model.categories
-      label='Categories'
-      as |category|
-    }}
-      {{#link-to (query-params category=category.slug episode=null tag=null filters=false)}}{{category.name}}{{/link-to}}
-    {{/tools.filter}}
-    {{#tools.filter 
-      models=model.tags
-      label='Tags'
-      as |tag|
-    }}
-      {{#link-to (query-params tag=tag.slug category=null episode=null filters=false)}}{{tag.name}}{{/link-to}}
-    {{/tools.filter}}
-  {{/gem-search-tools}}
-  
-  {{#with (or 
-      (if episode (find-by 'slug' episode model.episodes))
-      (if tag (find-by 'slug' tag model.tags))
-      (if category (find-by 'slug' category model.categories))
-    ) as |active|
+  {{head-data
+    title=(or page.title 'Videos')
   }}
-    {{#if active}}
-      <div class="filter-text">
-        {{#if (eq active.constructor.modelName 'tag')}}
-          Videos tagged with
-        {{else if (eq active.constructor.modelName 'category')}}
-          Videos in category
-        {{else}}
-          Videos from episode
-        {{/if}}        
-      </div>
-      <h1 class="filter-title">{{or active.title active.name}}</h1>
-    {{/if}}
-  {{/with}}
+  {{remember-document-scroll 
+    key=page.key
+  }}
   
-  {{liquid-outlet}}
-</section>
+  <section class="videos-page">
+    
+    {{#gem-search-tools
+      is-expanded=filters
+      as |tools|
+    }}    
+      {{#tools.filter 
+        models=model.episodes
+        label='Episodes'
+        as |episode|
+      }}
+        {{#link-to (query-params episode=episode.slug category=null tag=null filters=false)}}<span class="episode-code">{{episode.slug}}</span> - {{episode.title}}{{/link-to}}
+      {{/tools.filter}}
+      {{#tools.filter 
+        models=model.categories
+        label='Categories'
+        as |category|
+      }}
+        {{#link-to (query-params category=category.slug episode=null tag=null filters=false)}}{{category.name}}{{/link-to}}
+      {{/tools.filter}}
+      {{#tools.filter 
+        models=model.tags
+        label='Tags'
+        as |tag|
+      }}
+        {{#link-to (query-params tag=tag.slug category=null episode=null filters=false)}}{{tag.name}}{{/link-to}}
+      {{/tools.filter}}
+    {{/gem-search-tools}}
+    
+    {{#if page.title}}
+      <h1 class="filter-title">{{page.title}}</h1>
+    {{/if}}
+    
+    {{liquid-outlet}}
+  </section>
+  
+{{/with}}
+
