--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -5,90 +5,5 @@
 {{remember-document-scroll key="gemconf"}}
 
 <section class="conference">
-  
-  <main>
-    <article>
-        {{#box-content 
-        image="http://embermeetup.com/wp-content/uploads/2016/04/wifi-image.svg"
-      }}
-        <h2>Broadcasting Live from San Francisco</h2>
-        <p>
-          Join us in beautiful San Francisco for a free, 
-          one–day Ember.js conference packed with informative tech talks, 
-          friendly competitions and non-stop fun.
-        </p>
-      {{/box-content}}
-
-      {{#box-content}}
-
-        <h2 class="give-whitespace">Err, so... fun, yes. And what am I going to learn?</h2>
-
-        {{gem-topics topics=model.presentationTopics}}
-        
-      {{/box-content}}
-
-    </article>
-    <aside>
-      {{#box-content}}
-        <h2>Get your free ticket</h2>
-        {{#gem-cards as |cards|}}
-          {{#cards.card 'Participate in person'}}
-            <p>Participate in games and the contributor workshop.</p>
-            <a class="button red-button" href={{model.eventbrite}}>RSVP on Eventbrite</a>
-          {{/cards.card}}
-
-          {{#cards.card 'Participate online'}}
-            <p>Enjoy talks and discussion from the comfort of your home.</p>
-            <a class="button red-button" href={{model.bigmarker}}>RSVP on BigMarker</a>
-          {{/cards.card}}
-        {{/gem-cards}}
-      {{/box-content}}
-    </aside>
-  </main>
-
-  {{#box-callout 
-    image="http://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
-  }}
-    <h2>Lightning talks</h2>
-    <p>
-      If you're attending in person and would like to give a lightning talk.<br>
-      Send us an email <a href="mailto:t@embersherpa.com">t@embersherpa.com</a>
-    </p>
-  {{/box-callout}}
-
-  {{#box-content}}
-    <h2>Schedule</h2>
-    
-    {{#gem-agenda as |agenda|}}
-      {{agenda.item '9:00' 'Gathering'}}
-      {{agenda.item '9:30' 'Keynote by Taras and Tracy'}}
-      {{agenda.item '10:00' "What's up in Emberland? with EmberWeekend"}}
-      {{agenda.item '10:15' 'Showdown of Speakers'}}
-      {{agenda.item '10:30' 'Speaker 1'}}
-      {{agenda.item '11:15' 'Ember Game'}}
-      {{agenda.item '11:25' 'Speaker 2'}}
-      {{agenda.item '12:05' 'Lunch'}}
-      {{agenda.item '1:00' 'Lightning Talks'}}
-      {{agenda.item '1:20' 'Speaker 3'}}
-      {{agenda.item '1:55' 'Ember Jeopardy'}}
-      {{agenda.item '2:10' 'Speaker 4'}}
-      {{agenda.item '2:55' 'Closing Keynote'}}
-      {{agenda.item '3:00' 'Snack Break'}}
-      {{agenda.item '3:15' 'Contributor Workshop'}}
-      {{agenda.item '6:30' 'End'}}
-    {{/gem-agenda}}
-  {{/box-content}}
-
-  {{#box-callout backgroundColor="sky"}}  
-    <h2>Sponsors</h2>
-    <p>Big 🙇 to our sponsors for helping us bring this event to you.</p>
-
-    {{gem-sponsor-links sponsors=model.sponsors}}
-
-    <p>Want your logo to be seen by some ridiculously awesome developers?<br>
-    We would be very grateful for your support.</p>
-
-    {{link-to 'Sponsor Us!' 'pages' 'sponsor' classNames='button red-button'}}
-
-  {{/box-callout}}
+  {{liquid-outlet}}
 </section>
