--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'components/_gem-pagination';
 @import 'components/_gem-search-tools';
 @import 'components/_episode-strip';
+@import 'components/_breadcrumb';
 
 a {
   color: $darkerBlue;
