Changed to use https://

--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -6,7 +6,7 @@
     
     {{#box-content 
       classNames="intro"
-      image="http://embermeetup.com/wp-content/uploads/training.svg"
+      image="https://embermeetup.com/wp-content/uploads/training.svg"
     }}
       <h2>Live training at GEMconf</h2>
       <p>
@@ -20,12 +20,12 @@
       <h2>Your Instructors</h2>
       <div class="columns instructors">
         <div class="col-1 instructor">
-          <img src="http://embermeetup.com/wp-content/uploads/Ea52Geux.png">
+          <img src="https://embermeetup.com/wp-content/uploads/Ea52Geux.png">
           <h3>Chase McCarthy</h3>
           <p class="subtext">Ember Weekend Co-Host & Senior Developer, Hashrocket</p>
         </div>
         <div class="col-2 instructor">
-          <img src="http://embermeetup.com/wp-content/uploads/jonathan-jackson-a8c641ae1a7950aead6c0d97448d5b58.png">
+          <img src="https://embermeetup.com/wp-content/uploads/jonathan-jackson-a8c641ae1a7950aead6c0d97448d5b58.png">
           <h3>Jonathan Jackson</h3>
           <p class="subtext">Ember Weekend Co-Host & Senior Developer, Hashrocket</p>
         </div>
@@ -45,7 +45,7 @@
           <p>
             Some of the techniques we teach will include exploration into Ember's rich 
             <a href="https://www.emberaddons.com/">add-on ecosystem</a>, 
-            <a href="http://emberobserver.com/categories/authentication">authorization / authentication</a>, 
+            <a href="https://emberobserver.com/categories/authentication">authorization / authentication</a>, 
             and <a href="https://guides.emberjs.com/v2.3.0/testing/">advanced testing techniques</a>.
           </p>
           <p>
@@ -58,7 +58,7 @@
           <h4>Key Concepts</h4>
           <dl>
             <dt>Creating a new project</dt>
-            <dd>Use <a href="http://ember-cli.com/">Ember CLI</a> to create a new project and go over the basic structure of an app.</dd>
+            <dd>Use <a href="https://ember-cli.com/">Ember CLI</a> to create a new project and go over the basic structure of an app.</dd>
             <dt>Running the server</dt>
             <dd>Serve an ember app in development.</dd>
             <dt>Basic testing</dt>
@@ -130,7 +130,7 @@
                 </ul>
               </dd>
               <dt>Deployment</dt>
-              <dd>Deploy your Ember apps easily and confidently with <a href="http://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>
+              <dd>Deploy your Ember apps easily and confidently with <a href="https://ember-cli.com/ember-cli-deploy/">ember-cli-deploy</a>.</dd>
               <dt>Sockets</dt>
               <dd>Learn how to integrate real-time data into Ember Data with sockets.</dd>
             </dl>
