--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -1,7 +1,7 @@
   <main>
     <article class="with-aside">
       {{#box-content 
-        image="http://embermeetup.com/wp-content/uploads/wifi-image.svg"
+        image="https://embermeetup.com/wp-content/uploads/wifi-image.svg"
       }}
         <h2>Broadcasting Live from San Francisco</h2>
         <p>
@@ -57,7 +57,7 @@
   </main>
 
 {{#box-callout 
-  image="http://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
+  image="https://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
 }}
   <h2>Lightning talks</h2>
   <p>
