--- a/app/templates/videos.hbs
+++ b/app/templates/videos.hbs
@@ -1,17 +1,17 @@
-{{#with 
-  (hash 
+{{#with
+  (hash
     title=(or
       (if episode   (i 'Videos from episode "${title}"' title=(get (find-by 'slug' episode model.episodes) 'title')))
-      (if tag       (i 'Videos tagged with "${title}"'  title=(get (find-by 'slug' tag model.tags) 'name')))    
+      (if tag       (i 'Videos tagged with "${title}"'  title=(get (find-by 'slug' tag model.tags) 'name')))
       (if category  (i 'Videos in category "${title}"' title=(get (find-by 'slug' category model.categories) 'name')))
     )
-    key=(concat 
-      'videos' 
-      (or 
-        (if episode (concat '/episode-' episode)) 
+    key=(concat
+      'videos'
+      (or
+        (if episode (concat '/episode-' episode))
         (if tag (concat '/tag-' tag))
         (if category (concat '/category-' category))
-      ) 
+      )
       (if page (concat '/page/' page))
     )
   )
@@ -20,45 +20,44 @@
   {{head-data
     title=(or page.title 'Videos')
   }}
-  {{remember-document-scroll 
+  {{remember-document-scroll
     key=page.key
   }}
-  
+
   <section class="videos-page">
-    
+
     {{#gem-search-tools
       is-expanded=filters
       as |tools|
-    }}    
-      {{#tools.filter 
+    }}
+      {{#tools.filter
         models=model.episodes
         label='Episodes'
         as |episode|
       }}
-        {{#link-to (query-params episode=episode.slug category=null tag=null filters=false)}}<span class="episode-code">{{episode.slug}}</span> - {{episode.title}}{{/link-to}}
+        {{#link-to (query-params episode=episode.slug category=null page=1 tag=null filters=false)}}<span class="episode-code">{{episode.slug}}</span> - {{episode.title}}{{/link-to}}
       {{/tools.filter}}
-      {{#tools.filter 
+      {{#tools.filter
         models=model.categories
         label='Categories'
         as |category|
       }}
-        {{#link-to (query-params category=category.slug episode=null tag=null filters=false)}}{{category.name}}{{/link-to}}
+        {{#link-to (query-params category=category.slug episode=null page=1 tag=null filters=false)}}{{category.name}}{{/link-to}}
       {{/tools.filter}}
-      {{#tools.filter 
+      {{#tools.filter
         models=model.tags
         label='Tags'
         as |tag|
       }}
-        {{#link-to (query-params tag=tag.slug category=null episode=null filters=false)}}{{tag.name}}{{/link-to}}
+        {{#link-to (query-params tag=tag.slug category=null episode=null page=1 filters=false)}}{{tag.name}}{{/link-to}}
       {{/tools.filter}}
     {{/gem-search-tools}}
-    
+
     {{#if page.title}}
       <h1 class="filter-title">{{page.title}}</h1>
     {{/if}}
-    
+
     {{liquid-outlet}}
   </section>
-  
-{{/with}}
 
+{{/with}}
