--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -1,12 +1,12 @@
   <main>
     <article class="with-aside">
-      {{#box-content 
+      {{#box-content
         image="https://embermeetup.com/wp-content/uploads/wifi-image.svg"
       }}
         <h2>Broadcasting Live from San Francisco</h2>
         <p>
-          Join us in beautiful San Francisco for a free, 
-          one–day Ember.js conference packed with informative tech talks, 
+          Join us in beautiful San Francisco for a free,
+          one–day Ember.js conference packed with informative tech talks,
           friendly competitions and non-stop fun.
         </p>
       {{/box-content}}
@@ -16,7 +16,7 @@
         <h2 class="give-whitespace">Err, so... fun, yes. And what am I going to learn?</h2>
 
         {{gem-topics topics=model.presentationTopics}}
-        
+
       {{/box-content}}
 
     </article>
@@ -56,7 +56,7 @@
     </aside>
   </main>
 
-{{#box-callout 
+{{#box-callout
   image="https://embermeetup.com/wp-content/uploads/2016/04/microphone.svg" position="right" backgroundColor="red"
 }}
   <h2>Lightning talks</h2>
@@ -66,9 +66,9 @@
   </p>
 {{/box-callout}}
 
-{{#box-content}}
+{{#box-content class='gem-agenda-content'}}
   <h2>Schedule</h2>
-  
+
   {{#gem-agenda as |agenda|}}
     {{agenda.item '9:00' 'Gathering'}}
     {{agenda.item '9:30' 'Keynote by Taras and Tracy'}}
@@ -89,7 +89,7 @@
   {{/gem-agenda}}
 {{/box-content}}
 
-{{#box-callout backgroundColor="sky"}}  
+{{#box-callout backgroundColor="sky"}}
   <h2>Sponsors</h2>
   <p>Big 🙇 to our sponsors for helping us bring this event to you.</p>
 
