Centering sponsors section

--- a/app/styles/pages/_conference.scss
+++ b/app/styles/pages/_conference.scss
@@ -124,3 +124,10 @@
     margin: 0 auto;
   }
 }
+.gemconf-sponsors.box-callout {
+  .box-callout--content {
+    text-align: center;
+    float: none;
+    margin: 0 auto !important;
+  }
+}
