--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -89,7 +89,7 @@
   {{/gem-agenda}}
 {{/box-content}}
 
-{{#box-callout backgroundColor="sky"}}
+{{#box-callout backgroundColor="sky" class="gemconf-sponsors"}}
   <h2>Sponsors</h2>
   <p>Big 🙇 to our sponsors for helping us bring this event to you.</p>
 
