--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,7 +17,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_conference';
 @import 'pages/_videos';
 @import 'pages/_video';
-@import 'pages/_episodes';
+@import 'pages/_show';
 
 @import 'components/_nav-header';
 @import 'components/_hero-image';
