--- a/app/styles/pages/_conference.scss
+++ b/app/styles/pages/_conference.scss
@@ -1,3 +1,51 @@
+header.gemconf {
+  background: url(images/GEMconf-SF-Header.svg) $skyBlue no-repeat center;
+  height: 658px;
+  
+  h1 {
+    color: $darkerBlue;
+    margin: 0;
+  }
+  
+  .hero-sub-title {
+    display: block;
+    position: absolute;
+    width: 100%;
+
+    text-align: center;    
+    color: $blue;
+  }
+  
+  @include media($mobile) {
+    h1 {
+      font-size: 64px;
+      top: 100px;
+    }
+    
+    .hero-sub-title {
+      top: 180px;
+    }
+  }
+  
+  @include media($tablet) {
+    h1 {
+      font-size: 86px;
+      top: 80px;
+    }
+    
+    .hero-sub-title {
+      font-size: 42px;
+      top: 180px;
+    }
+  }
+    
+  @include media($desktop) {
+    h1 {
+      font-size: 88px;
+    }
+  }
+}
+
 .conference {
   @include outer-container(100%);
 
