--- a/app/templates/components/nav-header.hbs
+++ b/app/templates/components/nav-header.hbs
@@ -1,5 +1,9 @@
-{{#if headData.image}}
-  {{hero-image hero=headData.image}}
+{{#if withHero}}
+  {{link-to '' 'index' classNames="go-home" title="Go home"}}
+  <h1 class="font-bree-semibold">{{or headData.heroTitle headData.title}}</h1>
+  {{#if headData.heroSubTitle}}
+    <span class="font-bree-semibold hero-sub-title">{{headData.heroSubTitle}}</span>
+  {{/if}}
 {{else}}
   <nav>
     {{link-to '' 'index' classNames="go-home" title="Go home"}}
