--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,6 +1,9 @@
 {{head-data
   title=model.title
-  image=model.featured.url
+  image='/assets/images/GEMconf-SF-Header.svg'
+  heroTitle=model.heroTitle
+  heroSubTitle=model.heroSubTitle
+  classNames="gemconf"
 }}
 {{remember-document-scroll key="gemconf"}}
 
