--- a/app/templates/show.hbs
+++ b/app/templates/show.hbs
@@ -1,5 +1,7 @@
 {{head-data
   title="The Ember Show"
+  classNames="the-ember-show"
+  image="/assets/images/The-Ember-Show-Header.svg"
 }}
 {{scroll-to position=0}}
 
