Bunch of small tweaks

--- a/app/templates/gemconf/index.hbs
+++ b/app/templates/gemconf/index.hbs
@@ -42,14 +42,14 @@
             <p>This training is designed to quickly level up your Ember skills.</p>
             <p>Monday May 23, 2016, 9am-6pm PDT</p>
             {{link-to 'Remote' 'gemconf.training' (query-params location='remote') classNames="button red-button"}}
-            {{link-to 'In Redwood City, CA' 'gemconf.training' (query-params location='onsite') classNames="button red-button"}}
+            {{link-to 'In San Francisco' 'gemconf.training' (query-params location='onsite') classNames="button red-button"}}
           {{/cards.card}}
 
           {{#cards.card 'Expansion'}}
             <p>Strengthen your Ember.js knowledge and level up your skills using the framework.</p>
             <p>Tuesday May 24, 2016, 9am-6pm PDT</p>
             {{link-to 'Remote' 'gemconf.training' (query-params location='remote') classNames="button red-button"}}
-            {{link-to 'In Redwood City, CA' 'gemconf.training' (query-params location='onsite') classNames="button red-button"}}
+            {{link-to 'In San Francisco' 'gemconf.training' (query-params location='onsite') classNames="button red-button"}}
           {{/cards.card}}
         {{/gem-cards}}
       {{/box-content}}
