--- a/app/templates/gemconf/training.hbs
+++ b/app/templates/gemconf/training.hbs
@@ -162,7 +162,7 @@
     
     {{#box-content}}
     
-      <h2>Learn in Redwood City, CA</h2>      
+      <h2>Learn in San Francisco</h2>      
       {{#gem-cards classNames="three-cards" as |cards|}}
         {{#cards.card 'Day 1 - Fast Track'}}
           <p>This training is designed to quickly level up your Ember skills.</p>
