--- a/app/templates/components/gem-agenda.hbs
+++ b/app/templates/components/gem-agenda.hbs
@@ -1,6 +1,7 @@
 <table>
   <tbody>
     {{yield (hash
+      heading=(component 'gem-agenda-item' tagName='tr' classNames='gem-agenda-heading')
       item=(component 'gem-agenda-item' tagName='tr')
     )}}
   </tbody>
