--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -4,6 +4,8 @@
   heroTitle=model.heroTitle
   heroSubTitle=model.heroSubTitle
   classNames="gemconf"
+  buttonUrl="https://www.twitch.tv/global_ember_meetup"
+  buttonText="Watch Stream"
 }}
 {{remember-document-scroll key="gemconf"}}
 
