--- a/app/styles/pages/_conference.scss
+++ b/app/styles/pages/_conference.scss
@@ -7,12 +7,14 @@ header.gemconf {
     margin: 0;
   }
   
-  .hero-sub-title {
+  .hero-sub-title, .call-to-action {
     display: block;
     position: absolute;
     width: 100%;
+    text-align: center;        
+  }
 
-    text-align: center;    
+  .hero-sub-title {
     color: $blue;
   }
   
@@ -25,6 +27,10 @@ header.gemconf {
     .hero-sub-title {
       top: 180px;
     }
+    
+    .call-to-action {
+      top: 220px;
+    }
   }
   
   @include media($tablet) {
@@ -36,6 +42,10 @@ header.gemconf {
     .hero-sub-title {
       font-size: 42px;
       top: 180px;
+    }
+    
+    .call-to-action {
+      top: 240px;
     }
   }
     
