--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,6 +18,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_videos';
 @import 'pages/_video';
 @import 'pages/_show';
+@import 'pages/_tools';
 
 @import 'components/_nav-header';
 @import 'components/_hero-image';
