--- a/app/templates/tools/thumbnails.hbs
+++ b/app/templates/tools/thumbnails.hbs
@@ -3,6 +3,6 @@
     onload=(action (mut slug))
     as |video|
   }}
-    {{video-card video}}
+    {{video-card video show-footer=true}}
   {{/video-loader}}
 </div>
