--- a/app/templates/videos/index.hbs
+++ b/app/templates/videos/index.hbs
@@ -1,7 +1,7 @@
 <div class="video-cards">
   {{#each model as |video|}}
     <div class="medium-card-holder">
-      {{video-card model=video size='large'}}
+      {{video-card model=video show-footer=true}}
     </div>
   {{/each}}
 </div>
