--- a/app/styles/components/_video-card.scss
+++ b/app/styles/components/_video-card.scss
@@ -13,7 +13,8 @@
   }
   
   &--header {
-    flex: 1;    
+    flex: 1;
+    margin-top: 10px;
   }
   
   &--body {
@@ -22,6 +23,7 @@
 
   &--footer {
     flex: 1;
+    margin-bottom: 10px;    
   }
 
   &--title {
@@ -29,16 +31,13 @@
     padding: 0 10%;
     
     text-align: center;
-    font-family: 'Bree';
   }
 
   &--presenter {
     margin: auto;
     display: flex;
     flex-direction: row;
-    align-content: center;
-    
-    font-family: 'Dosis';
+    align-content: center;    
   }
 
   &--info {
@@ -49,8 +48,8 @@
   &--presenter-avatar {
     border-radius: 15px;
 
-    height: 112px;
-    width: 112px;
+    height: 80px;
+    width: 80px;
   }
 
   &--presenter-name {
@@ -63,10 +62,18 @@
     color: $blue;
   }
   
-  @include media($tablet) {
-    &--title, &--presenter-name {
-      font-size: 40px;      
-    }        
+  .button.small {
+    height: 44px;
+    display: flex;
+    margin: auto;
   }
   
+  &.is-not-small {
+    @include media($tablet) {
+      &--title, &--presenter-name {
+        font-size: 40px;      
+      }      
+    }    
+  }
+
 }
