Fixed height of element on video page

--- a/app/styles/pages/_video.scss
+++ b/app/styles/pages/_video.scss
@@ -21,6 +21,10 @@
     }
   }
   
+  .video-card-holder {
+    height: 260px;
+  }
+  
   &--title {
     font-size: 32px;
     -webkit-margin-before: 0px;
